--- a/src/output.css
+++ b/src/output.css
@@ -601,11 +601,6 @@ video {
   margin-right: 100px;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -622,12 +617,20 @@ video {
   margin-bottom: 2rem;
 }
 
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
 
-.mt-24 {
-  margin-top: 6rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .mt-3 {
@@ -642,8 +645,8 @@ video {
   margin-top: 2rem;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
+.mt-auto {
+  margin-top: auto;
 }
 
 .flex {
@@ -694,16 +697,16 @@ video {
   max-width: 18rem;
 }
 
-.flex-1 {
-  flex: 1 1 0%;
-}
-
 .flex-col {
   flex-direction: column;
 }
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -720,10 +723,6 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.self-end {
-  align-self: flex-end;
 }
 
 .rounded-full {
@@ -822,6 +821,11 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-5 {
